--- a/nomad/post/Makefile
+++ b/nomad/post/Makefile
@@ -3,10 +3,10 @@ goal: propagate.x
 #compilers
 #F90 = gfortran -fbounds-check
 #F90=ifort -warn -nofor_main -ipo -O2 -no-prec-div -openmp -assume cc_omp -complex_limited_range -debug extended -traceback -static-intel
-F90=/home/schuurm/software/hdf5/bin/h5fc -warn -nofor_main -ipo -O2 -no-prec-div -openmp -assume cc_omp -complex_limited_range -debug extended -traceback
+F90=/globalhome/schuurm/software/hdf5/bin/h5fc -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -complex_limited_range -debug extended -traceback
 
 #additional libraries
-LIBS= -L /usr/local/intel/ics/2013.0.028/composer_xe_2013.1.117/mkl/lib/intel64 -mkl=sequential -lpthread -L /home/schuurm/software/hdf5/lib -lhdf5_fortran -lhdf5 -L /usr/lib64 -lz
+LIBS= -L /software/intel/compilers_and_libraries_2018.2.199/linux/mkl/lib/intel64 -mkl=sequential -lpthread -L /home/schuurm/software/hdf5/lib -lhdf5_fortran -lhdf5 -L /usr/lib64 -lz
 
 #object files
 OBJS=propagate.o libchkpt.o lookup.o
