moving on from keyword parsing for time being

--- a/nomad/post/Makefile
+++ b/nomad/post/Makefile
@@ -9,7 +9,7 @@ F90=/globalhome/schuurm/software/hdf5/bin/h5fc -warn -nofor_main -ipo -O2 -no-pr
 LIBS= -L /software/intel/compilers_and_libraries_2018.2.199/linux/mkl/lib/intel64 -mkl=sequential -lpthread -L /home/schuurm/software/hdf5/lib -lhdf5_fortran -lhdf5 -L /usr/lib64 -lz
 
 #object files
-OBJS=propagate.o libchkpt.o lookup.o
+OBJS=propagate.o libchkpt.o nomad_vars.o
 
 ######## executables ##########
 propagate.x:   propagate_driver.o $(OBJS)
@@ -20,14 +20,14 @@ propagate.x:   propagate_driver.o $(OBJS)
 propagate_driver.o: propagate_driver.f90 propagate.o
 	$(F90) -c propagate_driver.f90
 
-propagate.o:        propagate.f90 libchkpt.o lookup.o
+propagate.o:        propagate.f90 libchkpt.o nomad_vars.o
 	$(F90) -c propagate.f90
 
-libchkpt.o:         libchkpt.f90 lookup.o
+libchkpt.o:         libchkpt.f90 nomad_vars.o
 	$(F90) -c libchkpt.f90
 
-lookup.o:           lookup.f90
-	$(F90) -c lookup.f90
+lookup.o:           nomad_vars.f90
+	$(F90) -c nomad_vars.f90
 
 clean:
 	-rm *.o *.mod propagate.x hamiltonian.x
