--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
+addons:
+  apt_packages:
+    - gfortran
 before_install:
   - pip install pytest
   - pip install pytest-cov
