intermediate commit -- adding ability to save matrices to checkpoint file containing propagated wavefunction

--- a/nomad/post/Makefile
+++ b/nomad/post/Makefile
@@ -1,7 +1,9 @@
 goal: fms.so
 
 #compilers
-F90=ifort -i8 -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -complex_limited_range -debug extended -traceback -mkl:serial
+F90=ifort -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -complex_limited_range -debug extended -traceback -check all -mkl:serial
+#F90=ifort -i8 -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -complex_limited_range -debug extended -traceback -check all
+#F90=gfortran -fdefault-integer-8 -fcheck=all -fbacktrace
 
 #additional libraries
 #LIBS= -L /software/intel/compilers_and_libraries_2019.5.281/linux/mkl/lib/intel64_lin -mkl=sequential -lpthread
