first check-in for nomad_density

--- a/nomad/post/Makefile
+++ b/nomad/post/Makefile
@@ -1,4 +1,4 @@
-goal: fms.so
+goal: fms.so lib_den.so
 
 #compilers
 F90=ifort -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -complex_limited_range -debug extended -traceback -check all -mkl:serial
@@ -12,14 +12,15 @@ F90=ifort -warn -nofor_main -ipo -O2 -no-prec-div -qopenmp -assume cc_omp -compl
 LIBS=''
 
 #object files
-OBJS=accuracy.o math.o lib_traj.o lib_amp.o fms.o
+OBJS=accuracy.o math.o lib_traj.o lib_amp.o fms.o lib_den.o
 
 ######## library ######
-#fms.so:	fms.o libprop.o
-#	ifort -shared fms.so fms.o libprop.o
 
 fms.so:	fms.f90 
 	$(F90) -fPIC -shared -o fms.so accuracy.f90 math.f90 lib_traj.f90 lib_amp.f90 fms.f90 $(LIBS)
+
+lib_den.so: lib_den.f90
+	$(F90) -fPIC -shared -o lib_den.so accuracy.f90 math.f90 lib_traj.f90 lib_den.f90 $(LIBS)
 
 #libprop.o: libprop.f90
 #	$(F90) -fpic -c libprop.f90
